# BashLume

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  sync-rule-packs.yml
docs/: architecture.md  rule-pack-format.md  rule-packs-plan.md
rules/trusted-keys/: README.md  bash-rules.pub  fish-rules.pub  zsh-rules.pub
scripts/: check.sh  update-rule-packs.py
shell/: bashlume.bash
src/: config.rs  ffi.rs  lib.rs  plugin.rs  render.rs  shell.rs
src/completion/: context.rs  matcher.rs  mod.rs  provider.rs  worker.rs
src/rules/: format.rs  ir.rs  loader.rs  mod.rs  probe.rs  vm.rs
src/syntax/: mod.rs
tests/: pty_smoke.py  resource_budget.py  tmux_bottom.py
tests/fixtures/rules/: demo.json  test-signing-key.hex
