[package]
name = "bashlume"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
authors = ["Fadouse <fadouse@pm.me>"]
description = "A lightweight, native completion and syntax-highlighting engine for GNU Bash"
license = "MIT"
repository = "https://github.com/Fadouse/BashLume"
keywords = ["bash", "readline", "completion", "syntax-highlighting"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.177"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"
overflow-checks = true

[profile.dev]
panic = "unwind"
