[package]
name = "bashlume"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Fadouse <fadouse@pm.me>"]
description = "A lightweight, native completion and syntax-highlighting engine for GNU Bash"
license = "GPL-2.0-or-later"
repository = "https://github.com/Fadouse/BashLume"
keywords = ["bash", "readline", "completion", "syntax-highlighting"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }
hex = "0.4.3"
libc = "0.2.177"
memmap2 = "0.9.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
unicode-width = "0.2.2"
zstd = { version = "0.13.3", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"
overflow-checks = true

[profile.dev]
panic = "unwind"
